# minitotp

./: CMakeLists.txt  LICENSE  README.md  TODO.md
.github/workflows/: test.yaml
libminitotp/: CMakeLists.txt  bits.h  hmac-sha1.c  hmac-sha1.h  hotp.c  minitotp.c  minitotp.pc.in  pad-otp.c  pad-otp.h  sha1.c  sha1.h  totp.c
libminitotp/include/: minitotp.h
libminitotp/tests/: test_common.h  test_hmac-sha1.c  test_hotp_rfc4226.c  test_pad-otp.c  test_rfc6238_table_sha1.c  test_sha1.c  test_totp_rfc6238.c
mtotp/: CMakeLists.txt  main.c  mtotp_test.sh
